<resources>
    <string name="app_name">Todos</string>

    <!--list Strings-->

        <!--menu text to add new todos-->
        <string name="delete_all_todos">Delete all todos</string>
        <!--empty view text-->
        <string name="empty_view">There are no todos as of now, Add to the list via the menu button</string>

    <!--end list strings-->

    <!--editor strings-->

        <!--menu text to save todos-->
        <string name="add_todo_menu_save">Save</string>
        <!--editor labels and hits-->
        <string name="editor_label_general">General</string>

        <string name="editor_title">Title</string>

        <string name="editor_description">Description</string>

        <string name="editor_label_category">Category</string>

        <string name="editor_category">Choose a Category</string>

        <string name="editor_label_details">Details</string>

        <string name="editor_due_date">Select Date Due</string>

        <string name="editor_priority">Select Priority</string>
        <!--end editor label and hints-->

        <!--strings for the category options -->
        <string name="category_work">Work</string>
        <string name="category_home">Home</string>
        <string name="category_other">Other</string>
        <string name="category_fixing">Repairs</string>
        <string name="category_finances">Finances</string>
        <string name="category_shopping">Shopping</string>
        <!--end category options-->

        <!--unsuccesfull insert message-->
        <string name="unsuccessfull_database_add_toast">Sorry was not able to enter the todo into the DB</string>
        <!--succesfull insert message-->
        <string name="successfull_database_add_toast">Todo was added to the Database</string>

    <!--end editor strings-->

    <!--Details strings-->

        <!--Details buttons-->
        <string name="details_button_edit">Edit</string>
        <string name="details_button_mark_complete">Mark Complete</string>
        <string name="details_button_delete">Delete</string>

        <string name="details_label_date_due">Date due</string>
        <string name="details_label_date_created">Date created</string>
        <style name="details_label_priority">Priority</style>
    <!--end Details strings-->
</resources>
