<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.aaronbrecher.todos.AddTodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editor_label_general"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editor_title"
                style="@style/EditorFieldStyle"/>

            <EditText
                android:id="@+id/editor_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editor_description"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editor_label_category"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editor_label_details" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <EditText
                android:id="@+id/editor_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editor_priority"
                style="@style/EditorFieldStyle"/>

            <EditText
                android:id="@+id/editor_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editor_due_date"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
